// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch Snapshot Tests renders a basic Switch checked 1`] = `
<div>
  <div
    class="cebus-switch-root checked ___1edset0 f1mnwdw1 f11drk60 fjr85dd f17m95gg fp7zjh8 f10pi13n fnceurk f15da5dy f14t3ns0 f1xqy1su f1sdsnyy f1qdqbpl f2hkw1w fdxsi5y f1i4q40k f1ab1e41 f1jd910e f1nw9czy f21wkpv fvk4ntw f1bkt4b4 f16hf5f2 fyyqeim f1qhqcal f1kbdjx9 fw1d893 f14hlsw1 fpuz8dn fgm4zzz f1o1s7a4 f1w999bl fr2bnm2 fs1pkn2 f1uv12qj fygjnvu f19a3h24 fi8kmiq f154viue f19xjkon f16i6z0r f1yxb9xe f1j67ls7 fuwct27 fmhvgw2 f1nfg4y5 fwk0j0a fgp83r2 f1qyni7v fkgjzhf f184pdv3 f1pqkugz felqjlh f1k6fduh"
    id="switch-1"
    style="--switch-checked-opacity: 1; --switch-unchecked-opacity: 0;"
  >
    <div
      class="cebus-switch-track ___ijazvc0 f1euv43f fly5x3f f1l02sjl f1sdsnyy f1aehjj5 f99sooz fxf9f1y frdto5n f8g0ba1 f3zr33r ff0gctb f170vdtw f1a4w3cr f1p757sw f1bn61u5 fi3shvb f1bwkb58 fiio4mc f1m5ya7j fc8z0qo f1uhpfti f13xoa2m f1ulo9ch f1f3z2xi fgir89g f77y9vx f11ef69 f1yuyem3 f1bp8q63 f13gddrr f1oarbwq ffdc0f3 frd86tk f1j35prr f100rgg8 f1l8ckay f1bvejbg f17rm5gp fmw406p f12c27rx f17thq47 f12kdog7"
    />
    <div
      class="___1xmyv9v f1euv43f f15twtuk f1yab3r1 fhpx7ww f1kctpth f1sdsnyy f1aehjj5"
      style="transform: translate(100%); transition: transform .1s cubic-bezier(0.33, 0.0, 0.67, 1), opacity .1s cubic-bezier(0.33, 0.0, 0.67, 1);"
    >
      <div
        class="cebus-switch-thumb ___12eohih f1euv43f fcjrtee fili5n9 f1ewtqcl fxvwsu1 f3ia6t0 f1e3jql2 f1gxgi0c f1i1t8d1 foouk8k f1sdsnyy f1aehjj5 fxf9f1y frdto5n f8g0ba1 f3zr33r ff0gctb f1gr4huy f1m8r8w5 foukppe fa7g5ba f99sooz f1uhpfti f11ef69 f1yuyem3 f1bp8q63 f13gddrr f1oarbwq fgskgf1 f17b9d0 f1gx7x1f f13aubqb f77y9vx frd86tk f1erhcsk flhcasy"
      />
    </div>
    <input
      checked=""
      class="cebus-switch-input ___1kiz3o9 fk73vx1 f1euv43f f1nbblvp fifp7yv f1ov4xf1 f1asdtw4 f1lmfglv fibjyge f1abmfm4 f9yszdx fly5x3f f1l02sjl f1sdsnyy f1aehjj5"
      readonly=""
      role="switch"
      type="checkbox"
    />
    <div
      class="___7v1sun0 f1euv43f fhpx7ww f1kctpth"
    />
  </div>
</div>
`;

exports[`Switch Snapshot Tests renders a basic Switch unchecked 1`] = `
<div>
  <div
    class="cebus-switch-root ___1edset0 f1mnwdw1 f11drk60 fjr85dd f17m95gg fp7zjh8 f10pi13n fnceurk f15da5dy f14t3ns0 f1xqy1su f1sdsnyy f1qdqbpl f2hkw1w fdxsi5y f1i4q40k f1ab1e41 f1jd910e f1nw9czy f21wkpv fvk4ntw f1bkt4b4 f16hf5f2 fyyqeim f1qhqcal f1kbdjx9 fw1d893 f14hlsw1 fpuz8dn fgm4zzz f1o1s7a4 f1w999bl fr2bnm2 fs1pkn2 f1uv12qj fygjnvu f19a3h24 fi8kmiq f154viue f19xjkon f16i6z0r f1yxb9xe f1j67ls7 fuwct27 fmhvgw2 f1nfg4y5 fwk0j0a fgp83r2 f1qyni7v fkgjzhf f184pdv3 f1pqkugz felqjlh f1k6fduh"
    id="switch-1"
    style="--switch-checked-opacity: 0; --switch-unchecked-opacity: 1;"
  >
    <div
      class="cebus-switch-track ___ijazvc0 f1euv43f fly5x3f f1l02sjl f1sdsnyy f1aehjj5 f99sooz fxf9f1y frdto5n f8g0ba1 f3zr33r ff0gctb f170vdtw f1a4w3cr f1p757sw f1bn61u5 fi3shvb f1bwkb58 fiio4mc f1m5ya7j fc8z0qo f1uhpfti f13xoa2m f1ulo9ch f1f3z2xi fgir89g f77y9vx f11ef69 f1yuyem3 f1bp8q63 f13gddrr f1oarbwq ffdc0f3 frd86tk f1j35prr f100rgg8 f1l8ckay f1bvejbg f17rm5gp fmw406p f12c27rx f17thq47 f12kdog7"
    />
    <div
      class="___1xmyv9v f1euv43f f15twtuk f1yab3r1 fhpx7ww f1kctpth f1sdsnyy f1aehjj5"
      style="transform: translate(0%); transition: transform .1s cubic-bezier(0.33, 0.0, 0.67, 1), opacity .1s cubic-bezier(0.33, 0.0, 0.67, 1);"
    >
      <div
        class="cebus-switch-thumb ___12eohih f1euv43f fcjrtee fili5n9 f1ewtqcl fxvwsu1 f3ia6t0 f1e3jql2 f1gxgi0c f1i1t8d1 foouk8k f1sdsnyy f1aehjj5 fxf9f1y frdto5n f8g0ba1 f3zr33r ff0gctb f1gr4huy f1m8r8w5 foukppe fa7g5ba f99sooz f1uhpfti f11ef69 f1yuyem3 f1bp8q63 f13gddrr f1oarbwq fgskgf1 f17b9d0 f1gx7x1f f13aubqb f77y9vx frd86tk f1erhcsk flhcasy"
      />
    </div>
    <input
      class="cebus-switch-input ___1kiz3o9 fk73vx1 f1euv43f f1nbblvp fifp7yv f1ov4xf1 f1asdtw4 f1lmfglv fibjyge f1abmfm4 f9yszdx fly5x3f f1l02sjl f1sdsnyy f1aehjj5"
      readonly=""
      role="switch"
      type="checkbox"
    />
    <div
      class="___7v1sun0 f1euv43f fhpx7ww f1kctpth"
    />
  </div>
</div>
`;

exports[`Switch Snapshot Tests renders a disabled Switch checked 1`] = `
<div>
  <div
    class="cebus-switch-root checked ___1edset0 f1mnwdw1 f11drk60 fjr85dd f17m95gg fp7zjh8 f10pi13n fnceurk f15da5dy f14t3ns0 f1xqy1su f1sdsnyy f1qdqbpl f2hkw1w fdxsi5y f1i4q40k f1ab1e41 f1jd910e f1nw9czy f21wkpv fvk4ntw f1bkt4b4 f16hf5f2 fyyqeim f1qhqcal f1kbdjx9 fw1d893 f14hlsw1 fpuz8dn fgm4zzz f1o1s7a4 f1w999bl fr2bnm2 fs1pkn2 f1uv12qj fygjnvu f19a3h24 fi8kmiq f154viue f19xjkon f16i6z0r f1yxb9xe f1j67ls7 fuwct27 fmhvgw2 f1nfg4y5 fwk0j0a fgp83r2 f1qyni7v fkgjzhf f184pdv3 f1pqkugz felqjlh f1k6fduh"
    id="switch-1"
    style="--switch-checked-opacity: 1; --switch-unchecked-opacity: 0;"
  >
    <div
      class="cebus-switch-track ___ijazvc0 f1euv43f fly5x3f f1l02sjl f1sdsnyy f1aehjj5 f99sooz fxf9f1y frdto5n f8g0ba1 f3zr33r ff0gctb f170vdtw f1a4w3cr f1p757sw f1bn61u5 fi3shvb f1bwkb58 fiio4mc f1m5ya7j fc8z0qo f1uhpfti f13xoa2m f1ulo9ch f1f3z2xi fgir89g f77y9vx f11ef69 f1yuyem3 f1bp8q63 f13gddrr f1oarbwq ffdc0f3 frd86tk f1j35prr f100rgg8 f1l8ckay f1bvejbg f17rm5gp fmw406p f12c27rx f17thq47 f12kdog7"
    />
    <div
      class="___1xmyv9v f1euv43f f15twtuk f1yab3r1 fhpx7ww f1kctpth f1sdsnyy f1aehjj5"
      style="transform: translate(100%); transition: transform .1s cubic-bezier(0.33, 0.0, 0.67, 1), opacity .1s cubic-bezier(0.33, 0.0, 0.67, 1);"
    >
      <div
        class="cebus-switch-thumb ___12eohih f1euv43f fcjrtee fili5n9 f1ewtqcl fxvwsu1 f3ia6t0 f1e3jql2 f1gxgi0c f1i1t8d1 foouk8k f1sdsnyy f1aehjj5 fxf9f1y frdto5n f8g0ba1 f3zr33r ff0gctb f1gr4huy f1m8r8w5 foukppe fa7g5ba f99sooz f1uhpfti f11ef69 f1yuyem3 f1bp8q63 f13gddrr f1oarbwq fgskgf1 f17b9d0 f1gx7x1f f13aubqb f77y9vx frd86tk f1erhcsk flhcasy"
      />
    </div>
    <input
      checked=""
      class="cebus-switch-input ___1kiz3o9 fk73vx1 f1euv43f f1nbblvp fifp7yv f1ov4xf1 f1asdtw4 f1lmfglv fibjyge f1abmfm4 f9yszdx fly5x3f f1l02sjl f1sdsnyy f1aehjj5"
      readonly=""
      role="switch"
      type="checkbox"
    />
    <div
      class="___7v1sun0 f1euv43f fhpx7ww f1kctpth"
    />
  </div>
</div>
`;

exports[`Switch Snapshot Tests renders a disabled Switch unchecked 1`] = `
<div>
  <div
    class="cebus-switch-root ___1edset0 f1mnwdw1 f11drk60 fjr85dd f17m95gg fp7zjh8 f10pi13n fnceurk f15da5dy f14t3ns0 f1xqy1su f1sdsnyy f1qdqbpl f2hkw1w fdxsi5y f1i4q40k f1ab1e41 f1jd910e f1nw9czy f21wkpv fvk4ntw f1bkt4b4 f16hf5f2 fyyqeim f1qhqcal f1kbdjx9 fw1d893 f14hlsw1 fpuz8dn fgm4zzz f1o1s7a4 f1w999bl fr2bnm2 fs1pkn2 f1uv12qj fygjnvu f19a3h24 fi8kmiq f154viue f19xjkon f16i6z0r f1yxb9xe f1j67ls7 fuwct27 fmhvgw2 f1nfg4y5 fwk0j0a fgp83r2 f1qyni7v fkgjzhf f184pdv3 f1pqkugz felqjlh f1k6fduh"
    id="switch-1"
    style="--switch-checked-opacity: 0; --switch-unchecked-opacity: 1;"
  >
    <div
      class="cebus-switch-track ___ijazvc0 f1euv43f fly5x3f f1l02sjl f1sdsnyy f1aehjj5 f99sooz fxf9f1y frdto5n f8g0ba1 f3zr33r ff0gctb f170vdtw f1a4w3cr f1p757sw f1bn61u5 fi3shvb f1bwkb58 fiio4mc f1m5ya7j fc8z0qo f1uhpfti f13xoa2m f1ulo9ch f1f3z2xi fgir89g f77y9vx f11ef69 f1yuyem3 f1bp8q63 f13gddrr f1oarbwq ffdc0f3 frd86tk f1j35prr f100rgg8 f1l8ckay f1bvejbg f17rm5gp fmw406p f12c27rx f17thq47 f12kdog7"
    />
    <div
      class="___1xmyv9v f1euv43f f15twtuk f1yab3r1 fhpx7ww f1kctpth f1sdsnyy f1aehjj5"
      style="transform: translate(0%); transition: transform .1s cubic-bezier(0.33, 0.0, 0.67, 1), opacity .1s cubic-bezier(0.33, 0.0, 0.67, 1);"
    >
      <div
        class="cebus-switch-thumb ___12eohih f1euv43f fcjrtee fili5n9 f1ewtqcl fxvwsu1 f3ia6t0 f1e3jql2 f1gxgi0c f1i1t8d1 foouk8k f1sdsnyy f1aehjj5 fxf9f1y frdto5n f8g0ba1 f3zr33r ff0gctb f1gr4huy f1m8r8w5 foukppe fa7g5ba f99sooz f1uhpfti f11ef69 f1yuyem3 f1bp8q63 f13gddrr f1oarbwq fgskgf1 f17b9d0 f1gx7x1f f13aubqb f77y9vx frd86tk f1erhcsk flhcasy"
      />
    </div>
    <input
      class="cebus-switch-input ___1kiz3o9 fk73vx1 f1euv43f f1nbblvp fifp7yv f1ov4xf1 f1asdtw4 f1lmfglv fibjyge f1abmfm4 f9yszdx fly5x3f f1l02sjl f1sdsnyy f1aehjj5"
      readonly=""
      role="switch"
      type="checkbox"
    />
    <div
      class="___7v1sun0 f1euv43f fhpx7ww f1kctpth"
    />
  </div>
</div>
`;
